# pulsedb

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: README.md  app.py  data.py
dashboard/pages/: 1_Pipeline_Health.py
docs/adr/: 0001-incrementality.md  0002-cost-and-storage.md  0003-quarantine.md
docs/screenshots/: README.md
ingestion/: gh_archive_pipeline.py
orchestration/: README.md  alerts.py  assets.py  definitions.py  metadata.py  project.py
quality/: README.md
sample_data/: gh_events_sample.csv
transform/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
transform/models/marts/: _marts__models.yml  agg_daily_repo_momentum.sql  dim_actor.sql  dim_repo.sql  fact_events.sql
transform/models/staging/: _staging__models.yml  _staging__sources.yml  base_gh_events.sql  quarantine_events.sql  stg_events.sql
transform/tests/: assert_bronze_reconciliation.sql  assert_momentum_grain_unique.sql
